# DataProcessingPipeline

./: .gitmodules  CMakeLists.txt  main.cpp
data/: Damped_mass_on_spring_LONG.csv
